test/integration/suite/k8s/networkpolicies/pods.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: networkpolicies-test
  name: networkpolicies-test-pod
spec:
  containers:
  - image: nginx:latest
    name: networkpolicies-test-pod
    ports:
    - containerPort: 80
  restartPolicy: Never

---
apiVersion: v1
kind: Service
metadata:
  name: networkpolicies-test-service
spec:
  selector:
    app: networkpolicies-test
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: networkpolicies-test-exec
  name: networkpolicies-test-exec-pod
spec:
  containers:
  - image: quay.io/curl/curl:latest
    name: networkpolicies-test-exec-pod
    command: ["sleep", "infinity"]
  restartPolicy: Never
